5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1573_994.log
== TEST (2019-04-01 15:30:48) 
-- CODE:
input("digite idade")
print("")
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:31:44) 
-- CODE:
n = input("digite idade")
"texto"
12.0
12
n = n + 2

print(n)
-- EXECUTION TIME:
0.134636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/994/main.py", line 5, in <module>
    n = n + 2
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:46) 
-- CODE:
n = input("digite idade")
"texto"
12.0
12
n = n + 2

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    n = n + 2
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:13) 
-- CODE:
n = input("digite idade")
"texto"
12.0
12
n = n + "2"

print(n)
-- OUTPUT:
xx2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:02) 
-- CODE:
n = int(input("digite idade"))
"texto"
12.0
12
#n = n + "2"
n = n + 2

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:03) 
-- CODE:
n = int(input("digite idade"))
"texto"
12.0
12
#n = n + "2"
n = n + 2
const n1 = 3.14

print(n)
-- ERROR:
File "XXXX", line 7
    const n1 = 3.14
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:43) 
-- CODE:
n = float(input("digite idade"))
"texto"
12.0
12
#n = n + "2"
n = n + 2

n1 = 3.14

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:31) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:35:39) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.138613
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
